# roarutils

./: .gitignore  Cargo.toml  README.md  flake.nix
.github/workflows/: general.yaml
catr/: Cargo.toml
catr/src/: lib.rs  main.rs
catr/tests/: cli.rs
catr/tests/expected/: tabs.txt.T.out  the-bustle.txt.v.out
crates/cat/: Cargo.toml
crates/cat/scripts/: mk-outs.sh
crates/cat/src/: lib.rs  main.rs
crates/cat/tests/: cli.rs
crates/echo/: Cargo.toml
crates/echo/src/: main.rs
crates/echo/tests/: cli.rs
crates/head/: Cargo.toml
crates/head/src/: lib.rs  main.rs
crates/head/tests/: cli.rs
crates/head/tests/inputs/: one.txt  two.txt
crates/true/: Cargo.toml
crates/true/tests/: cli.rs
crates/uniq/: Cargo.toml
crates/uniq/src/: lib.rs  main.rs
crates/uniq/tests/: cli.rs
crates/wc/: Cargo.toml
crates/wc/src/: lib.rs  main.rs
crates/wc/tests/: cli.rs
echor/: Cargo.toml
echor/scripts/: mk-outs.sh
echor/src/: main.rs
echor/tests/: cli.rs
tests/: cli.rs
