[package]
name = "echor"
version = "0.1.0"
edition = "2021"
authors = ["Matt Cook <matt@mattcook.dev>"]
description = "echor - display a line of text"
readme = "README.md"
repository = "https://github.com/sciencefidelity/coreutils"
license = "MIT or Apache-2.0"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
enum_glob_use = "deny"
pedantic = { level = "deny", priority = 1 }
nursery = { level = "deny", priority = 2 }
unwrap_used = "deny"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = "symbols"

[dependencies]
clap = { version = "4", features = ["cargo"] }

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
