[package]
name = "echo"
version = "0.1.0"
description = "Rust echo"
repository.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
clap = { version = "4", features = ["cargo"] }

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
