[package]
name = "head"
version = "0.1.0"
description = "Rust head"
repository.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

# [lints.rust]
# unsafe_code = "forbid"
#
# [lints.clippy]
# enum_glob_use = "deny"
# pedantic = { level = "deny", priority = 1 }
# nursery = { level = "deny", priority = 2 }
# unwrap_used = "deny"
#
# [profile.release]
# opt-level = "z"
# lto = true
# codegen-units = 1
# panic = "abort"
# strip = "symbols"

[dependencies]
clap = { version = "4", features = ["derive"] }
indoc = "2"

[dev-dependencies]
anyhow = "1"
assert_cmd = "2"
predicates = "3"
rand = "0.8"
