[package]
name = "head"
version = "0.1.0"
description = "Rust head"
repository.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
clap = { version = "4", features = ["derive"] }
indoc = "2"

[dev-dependencies]
anyhow = "1"
assert_cmd = "2"
predicates = "3"
rand = "0.8"
