[package]
name = "true"
version = "0.1.0"
description = "Rust true and false"
repository.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[[bin]]
name = "true"

[[bin]]
name = "false"

[dependencies]

[dev-dependencies]
assert_cmd = "2"
