[package]
name = "wc"
version = "0.1.0"
description = "Rust wc"
edition.workspace = true
authors.workspace = true
readme.workspace = true
repository.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
indoc = "2"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
pretty_assertions = "1"
rand = "0.8"
